--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
     <nav class="navigation">
       <ul class="navigation__list navigation__list--inline">
         <li class="navigation__item"><a href="/" class="navigation__link navigation__link--is-active">Главная</a></li>
-        <li class="navigation__item"><a href="/show_orders" class="navigation__link">Заявки</a></li>
+        <li class="navigation__item"><a href="/show_order" class="navigation__link">Заявки</a></li>
         <li class="navigation__item"><a href="/show_emp" class="navigation__link">Сотрудники</a></li>
         <li class="navigation__item"><a href="/show_dep" class="navigation__link">Департаменты</a></li>
-        <li class="navigation__item"><a href="/onas" class="navigation__link">О нас</a></li>
+        <li class="navigation__item"><a href="/create_order" class="navigation__link">Создать</a></li>
       </ul>
     </nav>
   </div>
