--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,6 +33,7 @@ body {
   line-height: 1.75;
   margin: 0;
   min-block-size: 100vh;
+  background-color: rgb(197, 230, 178);
 }
 
 
@@ -97,4 +98,35 @@ h1 {
 
 p {
   padding-block: 1.5em;
+}
+
+table {
+  background-color: rgb(125, 214, 137);
+  font-size: 12px;
+}
+
+.floating-button {
+  text-decoration: none;
+  display: inline-block;
+  width: 140px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 45px;
+  margin: 10px 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  font-weight: 600;
+  color: #524f4e;
+  background: white;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
+  transition: .3s;
+}
+.floating-button:hover {
+  background: #2EE59D;
+  box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
+  color: white;
+  transform: translateY(-7px);
 }
