--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
         <li class="navigation__item"><a href="/show_order" class="navigation__link">Заявки</a></li>
         <li class="navigation__item"><a href="/show_emp" class="navigation__link">Сотрудники</a></li>
         <li class="navigation__item"><a href="/show_dep" class="navigation__link">Департаменты</a></li>
-        <li class="navigation__item"><a href="/create_order" class="navigation__link">Создать</a></li>
+        <li class="navigation__item"><a href="/show_cus" class="navigation__link">Клиенты</a></li>
+        <li class="navigation__item"><a href="/show_tel" class="navigation__link">Телеграм</a></li>
       </ul>
     </nav>
   </div>
