--- a/templates/create_order.html
+++ b/templates/create_order.html
@@ -3,10 +3,8 @@
 {% block content %}
 <p>Для создания заявки, введите данные</p>
     <form method="POST">
-            <input  type="text" name="order_type" placeholder="Тип"><br>
             <input  type="text" name="description" placeholder="Описание"><br>
-            <input  type="text" name="status" placeholder="Статус"><br>
-            <input  type="text" name="serial_no" placeholder="Серийный номер"><br>
+            <input  type="text" name="serial_no" placeholder="Номер телефона"><br>
             <input  type="text" name="creator_id" placeholder="Менеджер"><br>
             <input  type="submit" value="Создать">
     </form>
