--- a/templates/show_order.html
+++ b/templates/show_order.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 align="center">Заявки</h1>
 <div align="center">
-<a href="/create_order" class="floating-button" >Cоздать</a>
+<a href="/create_order" class="floating-button">Cоздать</a>
 </div>
   <table border="1" >
    <tr>
@@ -17,7 +17,7 @@
     <th> Тип </th>
     <th> Описание </th>
     <th> Статус </th>
-    <th> Серийный номер </th>
+    <th> Номер телефона </th>
     <th> Менеджер </th>
     <th>  </th>
     <th>  </th>
